Removed unnecessary stuff, added roles for users and updated stats service to work correctly