@@ -1,6 +1,11 @@
 package com.bookbuddy.bookbuddy.service;
 
 import com.bookbuddy.bookbuddy.dto.book.BookResponse;
+import com.bookbuddy.bookbuddy.dto.book.TagCountResponse;
+import com.bookbuddy.bookbuddy.dto.user.TopUserWithDetailsResponse;
+import com.bookbuddy.bookbuddy.mapper.BookMapper;
+import com.bookbuddy.bookbuddy.model.Book;
+import com.bookbuddy.bookbuddy.model.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -9,6 +14,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,21 +30,11 @@ public class StatsService {
 
         List<Book> books = mongoTemplate.aggregate(aggregation, "books", Book.class).getMappedResults();
 
-        return books.stream().map(book -> {
-            BookResponse response = new BookResponse();
-            response.setId(book.getId());
-            response.setTitle(book.getTitle());
-            response.setAuthor(book.getAuthor());
-            response.setTags(book.getTags());
-            response.setSubject(book.getSubjects());
-            response.setAvgRating(book.getAvgRating());
-            response.setRatingsCount(book.getRatingsCount());
-            return response;
-        }).collect(Collectors.toList());
+        return books.stream().map(BookMapper::toBookResponse).toList();
     }
 
     // most active users
-    public List<Map<String, Object>> getMostActiveUsers() {
+    public List<TopUserWithDetailsResponse> getMostActiveUsers() {
         Aggregation aggregation = Aggregation.newAggregation(
                 Aggregation.group("userId").count().as("ratingsCount"),
                 Aggregation.project("ratingsCount").and("_id").as("userId"),
@@ -46,24 +42,11 @@ public class StatsService {
                 Aggregation.limit(5)
         );
 
-        return mongoTemplate.aggregate(aggregation, "ratings", Map.class)
-                .getMappedResults();
-    }
-
-    // average rating per book
-    public List<Map<String, Object>> getAverageRatingPerBook() {
-        Aggregation aggregation = Aggregation.newAggregation(
-                Aggregation.group("bookId").avg("rating").as("avgRating"),
-                Aggregation.project("avgRating").and("_id").as("bookId"),
-                Aggregation.sort(Sort.by(Sort.Direction.DESC, "avgRating"))
-        );
-
-        return mongoTemplate.aggregate(aggregation, "ratings", Map.class)
-                .getMappedResults();
+        return mongoTemplate.aggregate(aggregation, "ratings", TopUserWithDetailsResponse.class).getMappedResults();
     }
 
     // most popular tags
-    public List<Map<String, Object>> getMostPopularTags() {
+    public List<TagCountResponse> getMostPopularTags() {
         Aggregation aggregation = Aggregation.newAggregation(
                 Aggregation.unwind("tags"),
                 Aggregation.group("tags").count().as("count"),
@@ -71,7 +54,7 @@ public class StatsService {
                 Aggregation.sort(Sort.by(Sort.Direction.DESC, "count"))
         );
 
-        return mongoTemplate.aggregate(aggregation, "books", Map.class)
+        return mongoTemplate.aggregate(aggregation, "books", TagCountResponse.class)
                 .getMappedResults();
     }
 }
